# News-Comparator

./: .breakpoints  CNAME  README.md  app.py  comparator.py  main.py  nytscrape.py  pyproject.toml  requirements.txt  runtime.txt  scrapeurl.py  sites.json  styles.css  tops.json
.upm/: store.json
static/: styles.css
templates/: error.html  final.html  index.html  styles.css
