[tool.poetry]
name = "News Comparator"
version = "0.1.0"
description = "Compare two news sources together and showing sentance similarities and differences for each keyword they share."
authors = ["Daniel Philipov <batkodanny@gmail.com>", "Bradley Cao <bradleycao@gmail.com>", "Katie Merrill <katmerril7@gmail.com>", "Mina Warner <warnermina@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
bs4 = "^0.0.1"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
